[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprite/Attack/Bubble.png" type="Texture" id=1]
[ext_resource path="res://RigidBody2D.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 21.9851

[node name="Bubble" type="RigidBody2D"]
collision_layer = 8
collision_mask = 2147483649
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.250284, -0.250286 )
scale = Vector2( 2.04806, 2.04806 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.8354 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
[connection signal="body_entered" from="." to="." method="_on_Bubble_body_entered"]
[connection signal="ready" from="." to="." method="_on_RigidBody2D_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
